@@ -108,3 +108,6 @@
 [VNCServer]
 #enabled=false
 #port=5900
+#width=1024
+#height=768
+#depth=8
